test_suite5/ALAN/test_suite/alan-2022-examples/failing/005290_mutation.alan
source L begin leave q rem if 5422 then relax end m2 end
